[gd_scene load_steps=2 format=3 uid="uid://ckvllubugaiap"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_ap2i7"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_ap2i7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -52.0
offset_right = 64.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit"]
